# hato-bot

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitmodules  .markdown-lint.yml  .mypy.ini  .npmrc  .pre-commit-config.yaml  .pylintrc  .python-lint  .python-version  .sqlfluff  .textlintignore  .textlintrc  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  LICENSE.txt  Pipfile  Pipfile.lock-3.7  Pipfile.lock-3.8  Pipfile.lock-3.9  Procfile  README.md  README.template.md  app.json  build.docker-compose.yml  commands.txt  create_env.py  dev.base.docker-compose.yml  dev.docker-compose.yml  docker-compose.yml  entrypoint.py  entrypoint.sh  fly.template.toml  fly.toml  flyio_deploy.sh  heroku.yml  (+14 more)
.dependabot/: config.yml
.github/: add-to-task-list.yml  dependabot.yml
.github/linters/: .isort.cfg  .markdown-lint.yml  .sqlfluff  .textlintrc
doc/: 01_Get_Slack_API_Token.md  02_Get_Yahoo_API_Token.md  02_Setting_to_Event_URL.md  03_Deploy_to_Heroku.md  03_Get_Discord_Bot_Token.md  04_Get_Misskey_Access_Token.md  04_Setting_to_Event_URL.md  05_Get_Yahoo_API_Token.md  06_Get_OpenAI_API_Token.md
pgsql/: Dockerfile
plugins/: analyze.py  hato.py  hato_mikuji.py  my_menthon.py
postgres/: Dockerfile
scripts/: create_pull_request.js  create_pull_request_hato_bot.ts  get_pull_requests.js  get_pull_requests_hato_bot.js  get_pull_requests_hato_bot.ts  install_npm.sh  npm_ci.sh  pipenv_install.sh
setup/: .env.example  docker-compose.yml
test_/: settings.py  test_black.py  test_flake8.py  test_isort.py  test_pylint.py
tests/: test_run.py
(+89 files in other folders)
